# pcc

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  cscope.files  def_8h.html  def_8h.js  def_8h__dep__incl.dot  def_8h_source.html  dir_c6e645c98a00d5674f934f6af6a92642.html  dir_c6e645c98a00d5674f934f6af6a92642.js  dir_c6e645c98a00d5674f934f6af6a92642_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  octree_8h.html  octree_8h.js  octree_8h__dep__incl.dot  octree_8h__incl.dot  octree_8h_source.html  pcc_8h.html  pcc_8h.js  (+28 more)
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
cmake/dependencies/: google-draco.cmake  mpeg-vpcc.cmake  zstd.cmake
docs/: Doxyfile.in
example/: CMakeLists.txt  decode.c  empty_example.c  encode.c  multiple_decode.c  multiple_encode.c  wasm_decode.c  wasm_multiple_decode.c
include/pcc/: def.h  octree.h  pcc.h  point_cloud.h  vec3f.h  vec3u.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_2.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
source/: miniply.cpp  octree.c  pcc.c  ply.cpp  point_cloud.c
source/internal/: msh_ply.h  ply.h
source/internal/miniply/: miniply.h
test/: CMakeLists.txt
test/source/: pcc_test.c
